# Python-Trader-Backtest

./: .gitignore  GYMNASIUM_REFACTORING_PLAN.md  README.md  REFACTORING_PROGRESS.md  REFACTORING_SUMMARY.md  WORKFLOW_ANALYSIS.md  logging_config.yaml  pyproject.toml  pytest.ini  requirements.txt
app/: gui.py  utils.py
docs/: PROJECT_AGENTIC_CONTEXT.md  REFACTORING_PLAN.md  SIMULATOR_WORKFLOW_ANALYSIS.md  WORKFLOW_ANALYSIS.md
examples/: README.md  portfolio_comparison_demo.py  portfolio_optimization.py
notebooks/: backtesting_optimization.ipynb  backtesting_simulator.ipynb  data_collection.ipynb
notebooks/.ipynb_checkpoints/: backtesting_simulator-checkpoint.ipynb  data_collection-checkpoint.ipynb
src/: __init__.py  broker.py  brokers.py  exceptions.py  logging_config.py  logo.py  main.py  market.py  markets.py  optimization.py  position.py  simulators.py  test.py  trader.py  traders.py  utils.py
tests/: README.md  __init__.py  test_broker.py  test_logging.py  test_position.py  test_simulator.py  test_trader.py  test_utils.py
